# specforge.io

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
infra/: app.py  requirements.txt
infra/stacks/: specforge_stack.py
lambdas/orchestrator/: handler.py  requirements.txt
lambdas/orchestrator/agents/: errors.py  registry.py
lambdas/orchestrator/agents/phase1/: ambiguity_agent.py  base.py  complexity_agent.py  quality_agent.py
lambdas/orchestrator/agents/phase2/: api_agent.py  architecture_agent.py  base.py  edge_cases_agent.py  testing_agent.py
lambdas/orchestrator/core/: __init__.py  config.py  models.py  scoring.py  webhook.py
lambdas/orchestrator/pipeline/: phase1.py  phase2.py  writer.py
lambdas/orchestrator/services/: __init__.py  jira_service.py  s3_service.py  ssm_service.py
scripts/: bootstrap_ssm.py
tests/: conftest.py
tests/integration/: test_handler.py  test_jira_service.py  test_phase1.py  test_phase2.py  test_s3_service.py
tests/unit/: test_agent_registry.py  test_config.py  test_infra_stack.py  test_models.py  test_phase1_agents.py  test_phase2_agents.py  test_scoring.py  test_ssm_service.py  test_webhook.py  test_writer.py
