[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "specforge"
version = "0.1.0"
requires-python = ">=3.12"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lambdas/orchestrator"]
addopts = "--cov=lambdas/orchestrator --cov-report=term-missing"

[tool.coverage.run]
source = ["lambdas/orchestrator"]
omit = ["tests/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.1",
    "pytest-asyncio>=0.25",
    "moto[s3,ssm]>=5.1",
    "boto3>=1.38",
    "anthropic>=0.49",
    "httpx>=0.27",
    "python-dotenv>=1.1",
    "pydantic>=2.10",
    "ruff>=0.9",
    "respx>=0.22",
]
